--- a/Riskvalve/Views/Home/Index.cshtml
+++ b/Riskvalve/Views/Home/Index.cshtml
@@ -417,10 +417,11 @@
             },
 
             tooltip: {
-                formatter: function () {
-                    return '<b>' + this.series.xAxis.categories[this.point.x] + '</b> sold <br><b>' +
+                @* formatter: function () {
+                    return '';
+                    '<b>' + this.series.xAxis.categories[this.point.x] + '</b> sold <br><b>' +
                         this.point.value + '</b> items on <br><b>' + this.series.yAxis.categories[this.point.y] + '</b>';
-                }
+                } *@
             },
 
             /*want to make this part dynamically populated*/
